Bug 504526 - App-provides SNI icons are squished until panel is relocated
Summary: App-provides SNI icons are squished until panel is relocated
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kirigami
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.14.0
Platform: Other Linux
: HI normal
Target Milestone: 1.0
Assignee: kdelibs bugs
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2025-05-19 14:01 UTC by Nate Graham
Modified: 2025-05-19 15:04 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.15
Sentry Crash Report:


Attachments
On vertical panel (73.87 KB, image/png)
2025-05-19 14:01 UTC, Nate Graham
Details
On horizontal panel (541.32 KB, image/png)
2025-05-19 14:01 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2025-05-19 14:01:35 UTC
Created attachment 181511 [details]
On vertical panel

STEPS TO REPRODUCE
1. Have any system updates or install and launch Discord — such that either of their tray icons appears in the System Tray


OBSERVED RESULT
Their tray icons are visually squished along the opposite axis from the panel's long axis (i.e. horizontally squished on a vertical panel)


EXPECTED RESULT
SNI icons look normal


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 42
KDE Plasma Version: 6.3.90
KDE Frameworks Version: 6.15.0
Qt Version: 6.9.0
Kernel Version: 6.14.6-300.fc42.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 7840U w/ Radeon™ 780M Graphics
Memory: 16 GiB of RAM (14.9 GiB usable)
Graphics Processor: AMD Radeon 780M


ADDITIONAL INFORMATION
I can *always* reproduce this if I force plasmashell into RTL mode using `LANGUAGE=he_HE plasmashell --replace`.

I can *sometimes* can reproduce this with my panels normally.

When the issue is reproducing, if I move the panel with the affected icons to a screen edge of a different axis (i.e. make my vertical left panel a horizontal bottom panel) the icons un-squish and look fine.
Comment 1 Nate Graham 2025-05-19 14:01:56 UTC
Created attachment 181512 [details]
On horizontal panel
Comment 2 Bug Janitor Service 2025-05-19 14:41:46 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kirigami/-/merge_requests/1812
Comment 3 Vlad Zahorodnii 2025-05-19 15:02:59 UTC
Git commit 147b515533e9da5e96f402eb4b0f9da8d8dfbc25 by Vlad Zahorodnii.
Committed on 19/05/2025 at 14:42.
Pushed by vladz into branch 'master'.

Always update render node rect

The render node geometry is influenced by the bounding rectangle of the
Icon item and the image size. m_sizeChanged only accounts for the bounding
rectangle changes, so we miss updating the render node rect when the
image size changes.

calculateNodeRect() is pretty cheap, so we can just drop updateRect.
It'll fix an issue where icons are stretched and simplify the code a bit.

M  +3    -10   src/primitives/icon.cpp

https://invent.kde.org/frameworks/kirigami/-/commit/147b515533e9da5e96f402eb4b0f9da8d8dfbc25